# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: .env.bot.example  Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  base.py  natural.py
bot/services/: llm_client.py  lms_client.py  tools.py
